# YouTubeDailySummarizer

./: .gitignore  README.md  pyproject.toml
src/: download_channel_today.py  download_mp3.py
