[tool.poetry]
name = "youtubedailysummarizer"
version = "0.1.0"
description = ""
authors = ["dodogreen <jasonhung999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2024.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
